+ add manyToMany relation video_tags